// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heatmap tooltip when hidden should render 1`] = `
<div
  className="svg__tooltip"
  style={
    Object {
      "left": 100,
      "opacity": 0,
      "top": 200,
      "transform": "scale(0.8)",
      "visibility": "hidden",
    }
  }
>
  test text
</div>
`;

exports[`Heatmap tooltip when visible should render 1`] = `
<div
  className="svg__tooltip"
  style={
    Object {
      "left": 100,
      "opacity": 1,
      "top": 200,
      "transform": "scale(1)",
      "visibility": "visible",
    }
  }
>
  test text
</div>
`;
